Implementando a lista e adição de aluno

--- a/XF.Atividade_2/XF.Atividade_2/View/AlunoView.xaml
+++ b/XF.Atividade_2/XF.Atividade_2/View/AlunoView.xaml
@@ -2,12 +2,25 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XF.Atividade_2.View.AlunoView">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Adicionar" x:Name="btnAddAluno" Command="{Binding OnNovoCMD}" Order="Primary" Priority="1" />
+    </ContentPage.ToolbarItems>
+
     <ContentPage.Content>
         <StackLayout Padding="20">
-            <Label Text="Aluno" Font="20" />
-            <Label Text="{Binding Nome}" />
-            <Label Text="{Binding RM}" />
-            <Label Text="{Binding Email}" />
+            <Label Text="Alunos" Font="18" />
+            <ListView x:Name="lstAlunos" ItemsSource="{Binding Alunos}" >
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout Padding="5,0,5,0">
+                                <Label Text="{Binding Nome}" Font="14" />
+                                <Label Text="{Binding Email}" Font="10" />
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
