--- a/XF.Atividade_2/XF.Atividade_2/View/NovoAlunoView.xaml
+++ b/XF.Atividade_2/XF.Atividade_2/View/NovoAlunoView.xaml
@@ -1,18 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="XF.Atividade_2.View.NovoAlunoView">
+             x:Class="XF.Atividade_2.View.NovoAlunoView"
+             Title="Cadastrar Aluno">
     <ContentPage.Content>
         <StackLayout Padding="20">
-            <Entry x:Name="txtNome" Placeholder="Nome" Text="{Binding AlunoModel.Nome}" />
-            <Entry x:Name="txtRM" Placeholder="RM" Text="{Binding AlunoModel.RM}" />
-            <Entry x:Name="txtEmail" Placeholder="E-mail" Text="{Binding AlunoModel.Email}" />
-            <StackLayout Orientation="Horizontal">
-                <Button x:Name="btnSalvar" Text="Salvar" 
-                        Command="{Binding OnAdicionarAlunoCMD}"
-                        CommandParameter="{Binding AlunoModel}" />
-                <Button x:Name="btnCancelar" Text="Cancelar" Command="{Binding OnSairCMD}" />
-            </StackLayout>
+            <Label Text="Nome" />
+            <Entry x:Name="txtNome" Text="{Binding AlunoModel.Nome}" />
+            <Label Text="RM" />
+            <Entry x:Name="txtRM" Text="{Binding AlunoModel.RM}" />
+            <Label Text="E-mail" />
+            <Entry x:Name="txtEmail" Text="{Binding AlunoModel.Email}" />
+            <Button x:Name="btnSalvar" Text="Salvar" 
+                Command="{Binding OnAdicionarAlunoCMD}"
+                CommandParameter="{Binding AlunoModel}" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
